--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "express": "3.2.5",
         "jade": "*",
         "stylus": "*",
-        "mongodb": "1.1.4"
+        "mongodb": "1.1.4",
+        "geocoder": "0.1.0"
     }
 }
