--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "jade": "*",
         "stylus": "*",
         "mongodb": "1.1.4",
-        "geocoder": "0.1.0"
+        "geocoder": "0.1.0",
+        "nodemon": "*"
     }
 }
