--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node app.js"
+        , "tests" : "node_modules/mocha/bin/mocha -w -u bdd"
+        , "run" : "node_modules/watchify/bin/cmd.js public/javascripts/conges.js public/javascripts/index.js public/javascripts/merge.js -o public/javascripts/browser.js"
     },
     "dependencies": {
         "express": "3.2.5",
@@ -12,5 +14,10 @@
         "mongodb": "1.1.4",
         "geocoder": "0.1.0",
         "nodemon": "*"
+    }, "devDependencies" : {
+        "mocha":"*"
+        , "should":"*"
+        , "browserify":"*"
+        , "watchify" : "*"
     }
 }
