--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "tests": "node_modules/mocha/bin/mocha -w -u bdd tests",
-    "build": "node_modules/watchify/bin/cmd.js public/vendor/easy-button.js public/javascripts/conges.js public/javascripts/index.js public/javascripts/merge.js -o public/javascripts/browser.js"
+    "test": "node_modules/mocha/bin/mocha -u bdd tests",
+    "tdd": "node_modules/mocha/bin/mocha -w -u bdd tests"
   },
   "dependencies": {
     "express": "3.2.5",
@@ -13,12 +13,11 @@
     "stylus": "0.33.1",
     "mongodb": "1.1.4",
     "geocoder": "0.1.0",
+    "browserify": "4.2.0",
     "nodemon": "1.2.1"
   },
   "devDependencies": {
     "mocha": "1.20.1",
-    "should": "4.0.4",
-    "browserify": "4.2.0",
-    "watchify": "0.10.2"
+    "should": "4.0.4"
   }
 }
